--- a/app/globals.css
+++ b/app/globals.css
@@ -3,20 +3,19 @@
 @tailwind utilities;
  */
 
-
- @import "tailwindcss";
- @plugin "daisyui";
- @tailwind base;
+@import "tailwindcss";
+@plugin "daisyui";
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
- @layer base {
+@layer base {
   body {
     @apply text-[#fff];
   }
 }
 :root {
-  --color-primary: #EE3379;
+  --color-primary: #ee3379;
 }
 
 @theme inline {
@@ -24,15 +23,15 @@
   --font-display: "Inter", "sans-serif";
   --color-primary-500: oklch(0.68 0.23 341.45);
   --spacing: 0.25rem;
-  --animate-scroll: scroll var(--animation-duration, 40s) var(--animation-direction, forwards) linear infinite;
- 
+  --animate-scroll: scroll var(--animation-duration, 40s)
+    var(--animation-direction, forwards) linear infinite;
+
   @keyframes scroll {
     to {
       transform: translate(calc(-50% - 0.5rem));
     }
   }
 }
-
 
 /* globals.css or an imported CSS module */
 .tv-widget-outer,
